--- a/Charettes/index.html
+++ b/Charettes/index.html
@@ -3,8 +3,7 @@
     <head>
         <link rel = "stylesheet" type = "text/css" href = "style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-        <link rel="stylesheet" href="http://anijs.github.io/lib/anicollection/anicollection.css">
-        <!--<script src="/anijs-master/dist/anijs-min.js"></script>-->
+        <link rel="stylesheet" href="https://anijs.github.io/lib/anicollection/anicollection.css"> 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="script.js"></script>
     </head>
@@ -14,7 +13,7 @@
             <div class="cell" id="cell-1">
                 Here is some text.
             </div>
-            <div class="cell" id="cell-2"></div>
+            <div id="cell-2" data-anijs="if: mouseover, do: swing animated"> This is cell 2. </div>
             <div class="cell" id="cell-3"></div>
             <div class="cell" id="cell-4"></div>
             <div class="cell" id="cell-5"></div>
@@ -22,7 +21,7 @@
             <div class="cell" id="cell-7">
                 Where is it?
             </div>
-            <div class="cell" id="cell-8"></div>
+            <div id="cell-8" data-anijs="if: click, do: flipInY animated"></div>
             <div class="cell" id="cell-9"></div>
             <div class="cell" id="cell-10"></div>
             <div class="cell" id="cell-11"></div>
@@ -117,6 +116,7 @@
             <div class="cell" id="cell-98"></div>
             <div class="cell" id="cell-99"></div>
         </div>
-
+        <script src="https://anijs.github.io/lib/anijs/anijs-min.js"></script>
+        <script src="https://anijs.github.io/lib/anijs/helpers/dom/anijs-helper-dom-min.js"></script>
     </body>
 </html>
