--- a/Charettes/index.html
+++ b/Charettes/index.html
@@ -21,8 +21,8 @@
             <div class="cell" id="cell-7">
                 Where is it?
             </div>
-            <div id="cell-8" data-anijs="if: click, do: flipInY animated"></div>
-            <div class="cell" id="cell-9"></div>
+            <div id="cell-8" data-anijs="if: click, do: flipInY animated"><br></div>
+            <div id="cell-9" data-anijs="if: click, do: flipInY animated"></div>
             <div class="cell" id="cell-10"></div>
             <div class="cell" id="cell-11"></div>
             <div class="cell" id="cell-12"></div>
