--- a/Typeface/index.html
+++ b/Typeface/index.html
@@ -10,6 +10,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/firestyle.css" rel="stylesheet" type="text/css">
   <link href="css/piecesFire.css" rel="stylesheet" type="text/css">
+  <link href="css/volcano.css" rel="stylesheet" type="text/css">
   <link href="css/wilkinson-typeface.webflow.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
@@ -906,10 +907,10 @@
       </div>
     </div>
   </div>
-  <div id="w-node-_0d972a6f-758b-6c9d-ea25-2ef72c8fdd2c-83ca0dd1" class="ground"></div>
+  <div id="moon"></div>
   <div id="w-node-_90cd09d5-623d-2cc4-4bea-fd48e2f60269-83ca0dd1" class="fire w-container">
     <!--<div id="w-node-_5105812b-7cdd-d803-f12d-42e2644262cb-83ca0dd1" class="bonfire"></div>-->
-    <div class="fireplace">
+    <div class="fireplace" id="fp">
       <div class="blur">
       <div class="fireplace__flame_big"></div>
         </div>
@@ -930,6 +931,8 @@
       <div class="fireplace__light"></div>
     </div>
   </div>
+  <div id="w-node-_0d972a6f-758b-6c9d-ea25-2ef72c8fdd2c-83ca0dd1" class="ground"></div>
+
   <script src="js/anim.js"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63d2d82cc24a2bed18ca0dd0" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
