updating burning animation
make it work for all three kinds of components

--- a/Typeface/index.html
+++ b/Typeface/index.html
@@ -476,20 +476,7 @@
       </div>
       <div id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c27-83ca0dd1"></div>
       <div id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c28-83ca0dd1">
-        <div class="piece">
-          <div class="burn">
-            <div class="flame"></div>
-            <div class="flame"></div>
-            <div class="flame"></div>
-            <div class="flame"></div>
-            <div class="flame"></div>
-            <div class="flame"></div>
-            <div class="flame"></div>
-            <div class="flame"></div>
-            <div class="flame"></div>
-            <div class="flame"></div>
-          </div>
-        </div>
+        <div class="piece"></div>
       </div>
     </div>
     <div class="w-layout-grid letter">
