work drag drop and start word js
drag and drop still not completing working it just doesn't update letter position but it does fall apart

letters in word.html will not hover state but when clicked the whole letter catches fire and the fire could spread to other letters

--- a/Typeface/index.html
+++ b/Typeface/index.html
@@ -19,7 +19,7 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <div class="container w-container">
+  <div class="container w-container" id="full-grid">
     <div class="w-layout-grid letter" id="A" draggable="true" ondragstart="drag(event)">
       <div id="w-node-_178310f9-3695-89e7-c1fa-de48c776dd7c-83ca0dd1" class="div-block-2">
         <div class="piece">
