--- a/Typeface/word.html
+++ b/Typeface/word.html
@@ -21,7 +21,7 @@
 </head>
 <body class="body">
   <div class="container w-container" id="incendo-grid">
-    <div class="w-layout-grid letter I">
+    <div class="w-layout-grid letter 1">
       <div id="w-node-ca02eef8-d784-94d7-ab48-40250294abe3-83ca0dd1">
         <div class="branch flip"></div>
       </div>
@@ -45,7 +45,7 @@
       </div>
       <div id="w-node-ca02eef8-d784-94d7-ab48-40250294abee-83ca0dd1"></div>
     </div>
-    <div class="w-layout-grid letter N">
+    <div class="w-layout-grid letter 2">
       <div id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c1d-83ca0dd1">
         <div class="piece"></div>
       </div>
@@ -79,7 +79,7 @@
         <div class="piece"></div>
       </div>
     </div>
-    <div class="w-layout-grid letter C">
+    <div class="w-layout-grid letter 3">
       <div id="w-node-b39f2822-7619-9a68-9d47-c034675e344f-83ca0dd1">
         <div class="piece"></div>
       </div>
@@ -111,7 +111,7 @@
         <div class="piece"></div>
       </div>
     </div>
-    <div class="w-layout-grid letter E">
+    <div class="w-layout-grid letter 4">
       <div id="w-node-b63174ca-4870-5059-257b-2233ae715ade-83ca0dd1">
         <div class="piece"></div>
       </div>
@@ -145,7 +145,7 @@
         <div class="piece"></div>
       </div>
     </div>
-    <div class="w-layout-grid letter N">
+    <div class="w-layout-grid letter 5">
       <div id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c1d-83ca0dd1">
         <div class="piece"></div>
       </div>
@@ -179,7 +179,7 @@
         <div class="piece"></div>
       </div>
     </div>
-    <div class="w-layout-grid letter D">
+    <div class="w-layout-grid letter 6">
       <div id="w-node-_80af55cf-911b-7797-314f-dc780d77604d-83ca0dd1">
         <div class="piece"></div>
       </div>
@@ -213,7 +213,7 @@
         <div class="thin"></div>
       </div>
     </div>
-    <div class="w-layout-grid letter O">
+    <div class="w-layout-grid letter 7">
       <div id="w-node-c1365083-1584-7ec5-4841-4464cef8ac46-83ca0dd1">
         <div class="piece"></div>
       </div>
@@ -275,6 +275,7 @@
   </div>
 
   <script src="js/anim.js"></script>
+  <script src="js/word.js"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63d2d82cc24a2bed18ca0dd0" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
