--- a/Typeface/index.html
+++ b/Typeface/index.html
@@ -10,8 +10,9 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/firestyle.css" rel="stylesheet" type="text/css">
   <link href="css/piecesFire.css" rel="stylesheet" type="text/css">
-  <link href="css/volcano.css" rel="stylesheet" type="text/css">
+  <link href="css/arrow.css" rel="stylesheet" type="text/css">
   <link href="css/wilkinson-typeface.webflow.css" rel="stylesheet" type="text/css">
+  <link href="css/word.css" rel="stylesheet" type="text/css">
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -20,7 +21,243 @@
 </head>
 <body class="body">
   <div class="big-container">
-    <a href="word.html" class="page-link">Word</a>
+    <div class="container w-container" id="incendo-grid">
+      <div class="w-layout-grid letter" id="1">
+        <div class="col-1" id="w-node-ca02eef8-d784-94d7-ab48-40250294abe3-83ca0dd1">
+          <div class="branch flip"></div>
+        </div>
+        <div class="col-2" id="w-node-ca02eef8-d784-94d7-ab48-40250294abe4-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-3" id="w-node-ca02eef8-d784-94d7-ab48-40250294abe5-83ca0dd1">
+          <div class="branch"></div>
+        </div>
+        <div class="col-1" id="w-node-ca02eef8-d784-94d7-ab48-40250294abe6-83ca0dd1"></div>
+        <div class="col-2" id="w-node-ca02eef8-d784-94d7-ab48-40250294abe7-83ca0dd1"></div>
+        <div class="col-3"id="w-node-ca02eef8-d784-94d7-ab48-40250294abe8-83ca0dd1"></div>
+        <div class="col-1" id="w-node-ca02eef8-d784-94d7-ab48-40250294abe9-83ca0dd1"></div>
+        <div class="col-2" id="w-node-ca02eef8-d784-94d7-ab48-40250294abea-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-3"id="w-node-ca02eef8-d784-94d7-ab48-40250294abeb-83ca0dd1"></div>
+        <div class="col-1" id="w-node-ca02eef8-d784-94d7-ab48-40250294abec-83ca0dd1"></div>
+        <div class="col-2" id="w-node-ca02eef8-d784-94d7-ab48-40250294abed-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-3"id="w-node-ca02eef8-d784-94d7-ab48-40250294abee-83ca0dd1"></div>
+      </div>
+      <div class="w-layout-grid letter" id="2">
+        <div class="col-1" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c1d-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c1e-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-3"id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c1f-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-1" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c20-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c21-83ca0dd1">
+          <div class="branch flip"></div>
+        </div>
+        <div class="col-3" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c22-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-1" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c23-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c24-83ca0dd1"></div>
+        <div class="col-3" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c25-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-1" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c26-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c27-83ca0dd1"></div>
+        <div class="col-3" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c28-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+      </div>
+      <div class="w-layout-grid letter" id="3">
+        <div class="col-1" id="w-node-b39f2822-7619-9a68-9d47-c034675e344f-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-b39f2822-7619-9a68-9d47-c034675e3450-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-3" id="w-node-b39f2822-7619-9a68-9d47-c034675e3451-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-1" id="w-node-b39f2822-7619-9a68-9d47-c034675e3452-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-b39f2822-7619-9a68-9d47-c034675e3453-83ca0dd1">
+          <div class="branch"></div>
+        </div>
+        <div class="col-3" id="w-node-b39f2822-7619-9a68-9d47-c034675e3454-83ca0dd1"></div>
+        <div class="col-1" id="w-node-b39f2822-7619-9a68-9d47-c034675e3455-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-b39f2822-7619-9a68-9d47-c034675e3456-83ca0dd1"></div>
+        <div class="col-3" id="w-node-b39f2822-7619-9a68-9d47-c034675e3457-83ca0dd1"></div>
+        <div class="col-1" id="w-node-b39f2822-7619-9a68-9d47-c034675e3458-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-b39f2822-7619-9a68-9d47-c034675e3459-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-3" id="w-node-b39f2822-7619-9a68-9d47-c034675e345a-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+      </div>
+      <div class="w-layout-grid letter" id="4">
+        <div class="col-1" id="w-node-b63174ca-4870-5059-257b-2233ae715ade-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-b63174ca-4870-5059-257b-2233ae715adf-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-3" id="w-node-b63174ca-4870-5059-257b-2233ae715ae0-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-1" id="w-node-b63174ca-4870-5059-257b-2233ae715ae1-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-b63174ca-4870-5059-257b-2233ae715ae2-83ca0dd1">
+          <div class="branch"></div>
+        </div>
+        <div class="col-3" id="w-node-b63174ca-4870-5059-257b-2233ae715ae3-83ca0dd1"></div>
+        <div class="col-1" id="w-node-b63174ca-4870-5059-257b-2233ae715ae4-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-b63174ca-4870-5059-257b-2233ae715ae5-83ca0dd1">
+          <div class="thin"></div>
+        </div>
+        <div class="col-3" id="w-node-b63174ca-4870-5059-257b-2233ae715ae6-83ca0dd1"></div>
+        <div class="col-1" id="w-node-b63174ca-4870-5059-257b-2233ae715ae7-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-b63174ca-4870-5059-257b-2233ae715ae8-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-3" id="w-node-b63174ca-4870-5059-257b-2233ae715ae9-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+      </div>
+      <div class="w-layout-grid letter" id="5">
+        <div class="col-1" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c1d-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c1e-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-3" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c1f-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-1" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c20-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c21-83ca0dd1">
+          <div class="branch flip"></div>
+        </div>
+        <div class="col-3" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c22-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-1" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c23-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c24-83ca0dd1"></div>
+        <div class="col-3" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c25-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-1" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c26-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c27-83ca0dd1"></div>
+        <div class="col-3" id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c28-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+      </div>
+      <div class="w-layout-grid letter" id="6">
+        <div class="col-1" id="w-node-_80af55cf-911b-7797-314f-dc780d77604d-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-_80af55cf-911b-7797-314f-dc780d77604e-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-3" id="w-node-_80af55cf-911b-7797-314f-dc780d77604f-83ca0dd1"></div>
+        <div class="col-1" id="w-node-_80af55cf-911b-7797-314f-dc780d776050-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-_80af55cf-911b-7797-314f-dc780d776051-83ca0dd1"></div>
+        <div class="col-3" id="w-node-_80af55cf-911b-7797-314f-dc780d776052-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-1" id="w-node-_80af55cf-911b-7797-314f-dc780d776053-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-_80af55cf-911b-7797-314f-dc780d776054-83ca0dd1">
+          <div class="branch"></div>
+        </div>
+        <div class="col-3" id="w-node-_80af55cf-911b-7797-314f-dc780d776055-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-1" id="w-node-_80af55cf-911b-7797-314f-dc780d776056-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-_80af55cf-911b-7797-314f-dc780d776057-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-3" id="w-node-_80af55cf-911b-7797-314f-dc780d776058-83ca0dd1">
+          <div class="thin"></div>
+        </div>
+      </div>
+      <div class="w-layout-grid letter" id="7">
+        <div class="col-1" id="w-node-c1365083-1584-7ec5-4841-4464cef8ac46-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-c1365083-1584-7ec5-4841-4464cef8ac47-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-3" id="w-node-c1365083-1584-7ec5-4841-4464cef8ac48-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-1" id="w-node-c1365083-1584-7ec5-4841-4464cef8ac49-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-c1365083-1584-7ec5-4841-4464cef8ac4a-83ca0dd1">
+          <div class="branch"></div>
+        </div>
+        <div class="col-3" id="w-node-c1365083-1584-7ec5-4841-4464cef8ac4b-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-1" id="w-node-c1365083-1584-7ec5-4841-4464cef8ac4c-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-c1365083-1584-7ec5-4841-4464cef8ac4d-83ca0dd1"></div>
+        <div class="col-3" id="w-node-c1365083-1584-7ec5-4841-4464cef8ac4e-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-1" id="w-node-c1365083-1584-7ec5-4841-4464cef8ac4f-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-2" id="w-node-c1365083-1584-7ec5-4841-4464cef8ac50-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+        <div class="col-3" id="w-node-c1365083-1584-7ec5-4841-4464cef8ac51-83ca0dd1">
+          <div class="piece"></div>
+        </div>
+      </div>
+    </div>
+    <div class="page-link explode">    
+      <div class="arrow">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
     <div class="container w-container" id="full-grid">
       <div class="w-layout-grid letter" id="A" draggable="true" ondragstart="drag(event)">
         <div id="w-node-_178310f9-3695-89e7-c1fa-de48c776dd7c-83ca0dd1" class="div-block-2">
@@ -893,32 +1130,9 @@
       </div>
     </div>
   </div>
-  
-  <div id="w-node-_90cd09d5-623d-2cc4-4bea-fd48e2f60269-83ca0dd1" class="fire w-container" ondrop="drop(event)" ondragover="allowDrop(event)">
-    <!--<div id="w-node-_5105812b-7cdd-d803-f12d-42e2644262cb-83ca0dd1" class="bonfire"></div>-->
-    <div class="fireplace" id="fp">
-      <div class="blur">
-      <div class="fireplace__flame_big"></div>
-        </div>
-      <section class="fireplace__log"></section>
-      <section class="fireplace__log"></section>
-      <section class="fireplace__log"></section>
-      <section class="fireplace__log"></section>
-      <section class="fireplace__log"></section>
-      <section class="fireplace__log"></section>
-      <section class="fireplace__log"></section>
-       <main class="fireplace__spark"></main>
-      <main class="fireplace__spark"></main>
-      <main class="fireplace__spark"></main>
-      <main class="fireplace__spark"></main>
-      <div class="blur fix">
-      <div class="fireplace__flame"></div>
-        </div>
-      <div class="fireplace__light"></div>
-    </div>
-  </div>
 
   <script src="js/anim.js"></script>
+  <script src="js/word.js"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63d2d82cc24a2bed18ca0dd0" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
