--- a/Typeface/index.html
+++ b/Typeface/index.html
@@ -259,7 +259,7 @@
       </div>
     </div>
     <div class="container w-container" id="full-grid">
-      <div class="w-layout-grid letter" id="A" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="A">
         <div id="w-node-_178310f9-3695-89e7-c1fa-de48c776dd7c-83ca0dd1" class="div-block-2">
           <div class="piece"></div>
         </div>
@@ -297,7 +297,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="B" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="B">
         <div id="w-node-_2d00ded1-5b96-5bd3-f822-905ab3f99dfa-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -329,7 +329,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="C draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="C">
         <div id="w-node-b39f2822-7619-9a68-9d47-c034675e344f-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -361,7 +361,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="D" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="D">
         <div id="w-node-_80af55cf-911b-7797-314f-dc780d77604d-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -395,7 +395,7 @@
           <div class="thin"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="E draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="E">
         <div id="w-node-b63174ca-4870-5059-257b-2233ae715ade-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -429,7 +429,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="F" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="F">
         <div id="w-node-_22d4e460-ff75-4d77-efba-9dd837763a74-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -459,7 +459,7 @@
         <div id="w-node-_22d4e460-ff75-4d77-efba-9dd837763a7e-83ca0dd1"></div>
         <div id="w-node-_22d4e460-ff75-4d77-efba-9dd837763a7f-83ca0dd1"></div>
       </div>
-      <div class="w-layout-grid letter" id="G" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="G">
         <div id="w-node-cb8572df-69c4-edae-b05c-f8083a8bc3a2-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -493,7 +493,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="H" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="H">
         <div id="w-node-_037e42f9-cd30-380f-a978-b38f4358f3f8-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -529,7 +529,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="I" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="I">
         <div id="w-node-ca02eef8-d784-94d7-ab48-40250294abe3-83ca0dd1">
           <div class="branch flip"></div>
         </div>
@@ -553,7 +553,7 @@
         </div>
         <div id="w-node-ca02eef8-d784-94d7-ab48-40250294abee-83ca0dd1"></div>
       </div>
-      <div class="w-layout-grid letter" id="J" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="J">
         <div id="w-node-_1b213600-384d-82f4-31c0-df107131249d-83ca0dd1"></div>
         <div id="w-node-_1b213600-384d-82f4-31c0-df107131249e-83ca0dd1">
           <div class="branch flip"></div>
@@ -581,7 +581,7 @@
         </div>
         <div id="w-node-_1b213600-384d-82f4-31c0-df10713124a8-83ca0dd1"></div>
       </div>
-      <div class="w-layout-grid letter" id="K" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="K">
         <div id="w-node-f9149300-751b-7a6b-6d26-c075cba41d82-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -617,7 +617,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="L" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="L">
         <div id="w-node-df553c23-1b4e-2978-0659-867a321a8f87-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -645,7 +645,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="M" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="M">
         <div id="w-node-_441aed99-9607-6e95-4289-f85e0ece6790-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -680,7 +680,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="N" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="N">
         <div id="w-node-_2fe6c640-f82e-50bb-4d4f-2e7fbf4d2c1d-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -714,7 +714,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="O" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="O">
         <div id="w-node-c1365083-1584-7ec5-4841-4464cef8ac46-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -750,7 +750,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="P" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="P">
         <div id="w-node-_8cdb343d-6f85-af09-eb07-a7def7996c49-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -784,7 +784,7 @@
         </div>
         <div id="w-node-_8cdb343d-6f85-af09-eb07-a7def7996c54-83ca0dd1"></div>
       </div>
-      <div class="w-layout-grid letter" id="Q" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="Q">
         <div id="w-node-e3a63e2a-4383-9f7b-64b5-b48875cf5ff9-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -821,7 +821,7 @@
           <div class="thin"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="R" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="R">
         <div id="w-node-_150e5572-352f-5de5-6f14-71407bca82b7-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -857,7 +857,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="S" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="S">
         <div id="w-node-f621d997-1e6a-5405-43f4-7d5902a629cc-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -893,7 +893,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="T" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="T">
         <div id="w-node-abecab83-2fdd-6206-a294-fdc67f10de40-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -923,7 +923,7 @@
         </div>
         <div id="w-node-abecab83-2fdd-6206-a294-fdc67f10de4b-83ca0dd1"></div>
       </div>
-      <div class="w-layout-grid letter" id="U" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="U">
         <div id="w-node-_8a54cdf3-6b25-7980-18aa-8746cdb6a051-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -959,7 +959,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="V" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="V">
         <div id="w-node-_2382ce1d-bcd5-a6cc-f7b0-fbfc536b3db4-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -993,7 +993,7 @@
           <div class="thin"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="W" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="W">
         <div id="w-node-_39ba7b9b-b0e9-8d4e-f630-1a37f8e1dd3c-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -1027,7 +1027,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="X" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="X">
         <div id="w-node-c83e2021-07ef-82da-e574-7eb32b848c2f-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -1060,7 +1060,7 @@
           <div class="piece"></div>
         </div>
       </div>
-      <div class="w-layout-grid letter" id="Y" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="Y">
         <div id="w-node-a4bacffc-2b54-766b-9400-580aa2f865a6-83ca0dd1">
           <div class="piece"></div>
         </div>
@@ -1092,7 +1092,7 @@
         </div>
         <div id="w-node-a4bacffc-2b54-766b-9400-580aa2f865b1-83ca0dd1"></div>
       </div>
-      <div class="w-layout-grid letter" id="Z" draggable="true" ondragstart="drag(event)">
+      <div class="w-layout-grid letter" id="Z">
         <div id="w-node-bb4d5c02-1c8e-a9e1-5b16-ad4e3e7f1b2f-83ca0dd1">
           <div class="piece"></div>
         </div>
