--- a/Typeface/index.html
+++ b/Typeface/index.html
@@ -251,7 +251,14 @@
         </div>
       </div>
     </div>
-    <div class="page-link explode">    
+    <div class="page-link down explode">    
+      <div class="arrow">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+    <div class="page-link up explode">    
       <div class="arrow">
         <span></span>
         <span></span>
