--- a/Typeface/index.html
+++ b/Typeface/index.html
@@ -251,14 +251,14 @@
         </div>
       </div>
     </div>
-    <div class="page-link down explode">    
+    <div class="page-link down">    
       <div class="arrow">
         <span></span>
         <span></span>
         <span></span>
       </div>
     </div>
-    <div class="page-link up explode">    
+    <div class="page-link up">    
       <div class="arrow">
         <span></span>
         <span></span>
