make better arrows
not so distracting

--- a/Typeface/index.html
+++ b/Typeface/index.html
@@ -251,19 +251,12 @@
         </div>
       </div>
     </div>
-    <div class="page-link down">    
-      <div class="arrow">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
+    <div class="icon" id="i1"> 
+      <div class="arrow" id="a1"></div>   
+
     </div>
-    <div class="page-link up">    
-      <div class="arrow">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
+    <div class="icon" id="i2">   
+      <div class="arrow" id="a2"></div> 
     </div>
     <div class="container w-container" id="full-grid">
       <div class="w-layout-grid letter" id="A">
