--- a/breakpoints.html
+++ b/breakpoints.html
@@ -22,8 +22,8 @@
     <div id="dense-grid">
     </div>
   <script src="js/BPanim.js"></script>
-  <script src="js/anim.js"></script>
-  <script src="js/word.js"></script>
+   <!--<script src="js/anim.js"></script>-->
+   <!--<script src="js/word.js"></script>-->
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63d2d82cc24a2bed18ca0dd0" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
