polishing typeface page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body class="body">
-  <a id="toBreakpoints" href="breakpoints.html">Full Experience</a>
+  <a id="toBreakpoints" href="breakpoints.html" style="border-radius: 10%;">Full Experience</a>
   <div class="big-container">
     <div class="container w-container" id="incendo-grid">
       <div class="w-layout-grid letter" id="1">
